--- a/HashFile/nbproject/project.properties
+++ b/HashFile/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=HashFile
+application.vendor=ouvryl
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,10 +27,84 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/HashFile.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.icu4j-3.4.4.jar=../jasypt-1.9.2/lib/icu4j-3.4.4.jar
+file.reference.jasypt-1.9.2-javadoc.jar=../jasypt-1.9.2/lib/jasypt-1.9.2-javadoc.jar
+file.reference.jasypt-1.9.2-lite.jar=../jasypt-1.9.2/lib/jasypt-1.9.2-lite.jar
+file.reference.jasypt-1.9.2-sources.jar=../jasypt-1.9.2/lib/jasypt-1.9.2-sources.jar
+file.reference.jasypt-1.9.2.jar=../jasypt-1.9.2/lib/jasypt-1.9.2.jar
+file.reference.jasypt-acegisecurity-1.9.2-javadoc.jar=../jasypt-1.9.2/lib/jasypt-acegisecurity-1.9.2-javadoc.jar
+file.reference.jasypt-acegisecurity-1.9.2-sources.jar=../jasypt-1.9.2/lib/jasypt-acegisecurity-1.9.2-sources.jar
+file.reference.jasypt-acegisecurity-1.9.2.jar=../jasypt-1.9.2/lib/jasypt-acegisecurity-1.9.2.jar
+file.reference.jasypt-hibernate3-1.9.2-javadoc.jar=../jasypt-1.9.2/lib/jasypt-hibernate3-1.9.2-javadoc.jar
+file.reference.jasypt-hibernate3-1.9.2-sources.jar=../jasypt-1.9.2/lib/jasypt-hibernate3-1.9.2-sources.jar
+file.reference.jasypt-hibernate3-1.9.2.jar=../jasypt-1.9.2/lib/jasypt-hibernate3-1.9.2.jar
+file.reference.jasypt-hibernate4-1.9.2-javadoc.jar=../jasypt-1.9.2/lib/jasypt-hibernate4-1.9.2-javadoc.jar
+file.reference.jasypt-hibernate4-1.9.2-sources.jar=../jasypt-1.9.2/lib/jasypt-hibernate4-1.9.2-sources.jar
+file.reference.jasypt-hibernate4-1.9.2.jar=../jasypt-1.9.2/lib/jasypt-hibernate4-1.9.2.jar
+file.reference.jasypt-spring2-1.9.2-javadoc.jar=../jasypt-1.9.2/lib/jasypt-spring2-1.9.2-javadoc.jar
+file.reference.jasypt-spring2-1.9.2-sources.jar=../jasypt-1.9.2/lib/jasypt-spring2-1.9.2-sources.jar
+file.reference.jasypt-spring2-1.9.2.jar=../jasypt-1.9.2/lib/jasypt-spring2-1.9.2.jar
+file.reference.jasypt-spring3-1.9.2-javadoc.jar=../jasypt-1.9.2/lib/jasypt-spring3-1.9.2-javadoc.jar
+file.reference.jasypt-spring3-1.9.2-sources.jar=../jasypt-1.9.2/lib/jasypt-spring3-1.9.2-sources.jar
+file.reference.jasypt-spring3-1.9.2.jar=../jasypt-1.9.2/lib/jasypt-spring3-1.9.2.jar
+file.reference.jasypt-spring31-1.9.2-javadoc.jar=../jasypt-1.9.2/lib/jasypt-spring31-1.9.2-javadoc.jar
+file.reference.jasypt-spring31-1.9.2-sources.jar=../jasypt-1.9.2/lib/jasypt-spring31-1.9.2-sources.jar
+file.reference.jasypt-spring31-1.9.2.jar=../jasypt-1.9.2/lib/jasypt-spring31-1.9.2.jar
+file.reference.jasypt-springsecurity2-1.9.2-javadoc.jar=../jasypt-1.9.2/lib/jasypt-springsecurity2-1.9.2-javadoc.jar
+file.reference.jasypt-springsecurity2-1.9.2-sources.jar=../jasypt-1.9.2/lib/jasypt-springsecurity2-1.9.2-sources.jar
+file.reference.jasypt-springsecurity2-1.9.2.jar=../jasypt-1.9.2/lib/jasypt-springsecurity2-1.9.2.jar
+file.reference.jasypt-springsecurity3-1.9.2-javadoc.jar=../jasypt-1.9.2/lib/jasypt-springsecurity3-1.9.2-javadoc.jar
+file.reference.jasypt-springsecurity3-1.9.2-sources.jar=../jasypt-1.9.2/lib/jasypt-springsecurity3-1.9.2-sources.jar
+file.reference.jasypt-springsecurity3-1.9.2.jar=../jasypt-1.9.2/lib/jasypt-springsecurity3-1.9.2.jar
+file.reference.jasypt-wicket13-1.9.2-javadoc.jar=../jasypt-1.9.2/lib/jasypt-wicket13-1.9.2-javadoc.jar
+file.reference.jasypt-wicket13-1.9.2-sources.jar=../jasypt-1.9.2/lib/jasypt-wicket13-1.9.2-sources.jar
+file.reference.jasypt-wicket13-1.9.2.jar=../jasypt-1.9.2/lib/jasypt-wicket13-1.9.2.jar
+file.reference.jasypt-wicket15-1.9.2-javadoc.jar=../jasypt-1.9.2/lib/jasypt-wicket15-1.9.2-javadoc.jar
+file.reference.jasypt-wicket15-1.9.2-sources.jar=../jasypt-1.9.2/lib/jasypt-wicket15-1.9.2-sources.jar
+file.reference.jasypt-wicket15-1.9.2.jar=../jasypt-1.9.2/lib/jasypt-wicket15-1.9.2.jar
+file.reference.projetSecurite-jasypt-1.9.2=../jasypt-1.9.2
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.hibernate4-support.classpath}:\
+    ${file.reference.projetSecurite-jasypt-1.9.2}:\
+    ${file.reference.icu4j-3.4.4.jar}:\
+    ${file.reference.jasypt-1.9.2-javadoc.jar}:\
+    ${file.reference.jasypt-1.9.2-lite.jar}:\
+    ${file.reference.jasypt-1.9.2-sources.jar}:\
+    ${file.reference.jasypt-1.9.2.jar}:\
+    ${file.reference.jasypt-acegisecurity-1.9.2-javadoc.jar}:\
+    ${file.reference.jasypt-acegisecurity-1.9.2-sources.jar}:\
+    ${file.reference.jasypt-acegisecurity-1.9.2.jar}:\
+    ${file.reference.jasypt-hibernate3-1.9.2-javadoc.jar}:\
+    ${file.reference.jasypt-hibernate3-1.9.2-sources.jar}:\
+    ${file.reference.jasypt-hibernate3-1.9.2.jar}:\
+    ${file.reference.jasypt-hibernate4-1.9.2-javadoc.jar}:\
+    ${file.reference.jasypt-hibernate4-1.9.2-sources.jar}:\
+    ${file.reference.jasypt-hibernate4-1.9.2.jar}:\
+    ${file.reference.jasypt-spring2-1.9.2-javadoc.jar}:\
+    ${file.reference.jasypt-spring2-1.9.2-sources.jar}:\
+    ${file.reference.jasypt-spring2-1.9.2.jar}:\
+    ${file.reference.jasypt-spring3-1.9.2-javadoc.jar}:\
+    ${file.reference.jasypt-spring3-1.9.2-sources.jar}:\
+    ${file.reference.jasypt-spring3-1.9.2.jar}:\
+    ${file.reference.jasypt-spring31-1.9.2-javadoc.jar}:\
+    ${file.reference.jasypt-spring31-1.9.2-sources.jar}:\
+    ${file.reference.jasypt-spring31-1.9.2.jar}:\
+    ${file.reference.jasypt-springsecurity2-1.9.2-javadoc.jar}:\
+    ${file.reference.jasypt-springsecurity2-1.9.2-sources.jar}:\
+    ${file.reference.jasypt-springsecurity2-1.9.2.jar}:\
+    ${file.reference.jasypt-springsecurity3-1.9.2-javadoc.jar}:\
+    ${file.reference.jasypt-springsecurity3-1.9.2-sources.jar}:\
+    ${file.reference.jasypt-springsecurity3-1.9.2.jar}:\
+    ${file.reference.jasypt-wicket13-1.9.2-javadoc.jar}:\
+    ${file.reference.jasypt-wicket13-1.9.2-sources.jar}:\
+    ${file.reference.jasypt-wicket13-1.9.2.jar}:\
+    ${file.reference.jasypt-wicket15-1.9.2-javadoc.jar}:\
+    ${file.reference.jasypt-wicket15-1.9.2-sources.jar}:\
+    ${file.reference.jasypt-wicket15-1.9.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -53,7 +128,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=
+main.class=Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
