--- a/HashFile/nbproject/private/private.properties
+++ b/HashFile/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/infoetu/ouvryl/.netbeans/8.0/build.properties
+user.properties.file=C:\\Users\\Ludovic\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
